--- a/app/src/main/res/layout-land/activity_sign_up.xml
+++ b/app/src/main/res/layout-land/activity_sign_up.xml
@@ -8,140 +8,150 @@
     android:paddingTop="20dp"
     android:paddingRight="80dp">
 
-    <TextView
-        android:id="@+id/tv_signup_name"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/name"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/et_signup_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/empty_name_message"
-        android:textColorHint="@color/gray"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup_name"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup_name"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_name" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_siginup_name_error"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/red"
-        app:layout_constraintEnd_toEndOf="@+id/et_signup_name"
-        app:layout_constraintStart_toStartOf="@+id/et_signup_name"
-        app:layout_constraintTop_toBottomOf="@+id/et_signup_name" />
+            <TextView
+                android:id="@+id/tv_signup_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/name"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_signup_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/id"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_siginup_name_error"
-        app:layout_constraintStart_toStartOf="@+id/tv_siginup_name_error"
-        app:layout_constraintTop_toBottomOf="@+id/tv_siginup_name_error" />
+            <EditText
+                android:id="@+id/et_signup_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/empty_name_message"
+                android:inputType="text"
+                android:textColorHint="@color/gray"
+                app:layout_constraintEnd_toEndOf="@+id/tv_signup_name"
+                app:layout_constraintStart_toStartOf="@+id/tv_signup_name"
+                app:layout_constraintTop_toBottomOf="@+id/tv_signup_name" />
 
-    <EditText
-        android:id="@+id/et_signup_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:textColorHint="@color/gray"
-        android:hint="@string/empty_id_message"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup_id"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup_id"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_id" />
+            <TextView
+                android:id="@+id/tv_siginup_name_error"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/red"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_name"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_name"
+                app:layout_constraintTop_toBottomOf="@+id/et_signup_name" />
 
-    <TextView
-        android:id="@+id/tv_signup_id_error"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/red"
-        app:layout_constraintEnd_toEndOf="@+id/et_signup_id"
-        app:layout_constraintStart_toStartOf="@+id/et_signup_id"
-        app:layout_constraintTop_toBottomOf="@+id/et_signup_id" />
+            <TextView
+                android:id="@+id/tv_signup_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/id"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="@+id/tv_siginup_name_error"
+                app:layout_constraintStart_toStartOf="@+id/tv_siginup_name_error"
+                app:layout_constraintTop_toBottomOf="@+id/tv_siginup_name_error" />
 
-    <TextView
-        android:id="@+id/tv_signin_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/password"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup_id_error"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup_id_error"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_id_error" />
+            <EditText
+                android:id="@+id/et_signup_id"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/empty_id_message"
+                android:inputType="text"
+                android:textColorHint="@color/gray"
+                app:layout_constraintEnd_toEndOf="@+id/tv_signup_id"
+                app:layout_constraintStart_toStartOf="@+id/tv_signup_id"
+                app:layout_constraintTop_toBottomOf="@+id/tv_signup_id" />
 
-    <EditText
-        android:id="@+id/et_signup_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/empty_password_message"
-        android:textColorHint="@color/gray"
-        android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signin_password"
-        app:layout_constraintStart_toStartOf="@+id/tv_signin_password"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signin_password" />
+            <TextView
+                android:id="@+id/tv_signup_id_error"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/red"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_id"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_id"
+                app:layout_constraintTop_toBottomOf="@+id/et_signup_id" />
 
-    <TextView
-        android:id="@+id/tv_signup_password_error"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/red"
-        app:layout_constraintEnd_toEndOf="@+id/et_signup_password"
-        app:layout_constraintStart_toStartOf="@+id/et_signup_password"
-        app:layout_constraintTop_toBottomOf="@+id/et_signup_password" />
+            <TextView
+                android:id="@+id/tv_signin_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/password"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="@+id/tv_signup_id_error"
+                app:layout_constraintStart_toStartOf="@+id/tv_signup_id_error"
+                app:layout_constraintTop_toBottomOf="@+id/tv_signup_id_error" />
 
-    <TextView
-        android:id="@+id/tv_signup_password2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/check_password"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup_password_error"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup_password_error"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password_error" />
+            <EditText
+                android:id="@+id/et_signup_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/empty_password_message"
+                android:inputType="textPassword"
+                android:textColorHint="@color/gray"
+                app:layout_constraintEnd_toEndOf="@+id/tv_signin_password"
+                app:layout_constraintStart_toStartOf="@+id/tv_signin_password"
+                app:layout_constraintTop_toBottomOf="@+id/tv_signin_password" />
 
-    <EditText
-        android:id="@+id/et_signup_password2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="@string/empty_password_message"
-        android:textColorHint="@color/gray"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup_password2"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup_password2"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2" />
+            <TextView
+                android:id="@+id/tv_signup_password_error"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/red"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_password"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_password"
+                app:layout_constraintTop_toBottomOf="@+id/et_signup_password" />
 
-    <TextView
-        android:id="@+id/tv_signup_password2_error"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/red"
-        app:layout_constraintEnd_toEndOf="@+id/et_signup_password2"
-        app:layout_constraintStart_toStartOf="@+id/et_signup_password2"
-        app:layout_constraintTop_toBottomOf="@+id/et_signup_password2" />
+            <TextView
+                android:id="@+id/tv_signup_password2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/check_password"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="@+id/tv_signup_password_error"
+                app:layout_constraintStart_toStartOf="@+id/tv_signup_password_error"
+                app:layout_constraintTop_toBottomOf="@+id/tv_signup_password_error" />
 
-    <Button
-        android:id="@+id/btn_signup_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:backgroundTint="@color/component_color"
-        android:enabled="false"
-        android:text="@string/next"
-        android:textColor="@color/text_color"
-        app:layout_constraintEnd_toEndOf="@+id/tv_signup_password2_error"
-        app:layout_constraintStart_toStartOf="@+id/tv_signup_password2_error"
-        app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2_error" />
+            <EditText
+                android:id="@+id/et_signup_password2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/empty_password_message"
+                android:inputType="textPassword"
+                android:textColorHint="@color/gray"
+                app:layout_constraintEnd_toEndOf="@+id/tv_signup_password2"
+                app:layout_constraintStart_toStartOf="@+id/tv_signup_password2"
+                app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2" />
+
+            <TextView
+                android:id="@+id/tv_signup_password2_error"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/red"
+                app:layout_constraintEnd_toEndOf="@+id/et_signup_password2"
+                app:layout_constraintStart_toStartOf="@+id/et_signup_password2"
+                app:layout_constraintTop_toBottomOf="@+id/et_signup_password2" />
+
+            <Button
+                android:id="@+id/btn_signup_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:backgroundTint="@color/component_color"
+                android:enabled="false"
+                android:text="@string/next"
+                android:textColor="@color/text_color"
+                app:layout_constraintEnd_toEndOf="@+id/tv_signup_password2_error"
+                app:layout_constraintStart_toStartOf="@+id/tv_signup_password2_error"
+                app:layout_constraintTop_toBottomOf="@+id/tv_signup_password2_error" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
