--- a/app/src/main/res/layout-land/activity_choose_profile.xml
+++ b/app/src/main/res/layout-land/activity_choose_profile.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="16dp"
         android:text="프로필을 골라주세요!!"
         android:textColor="@color/text_color"
-        android:textSize="34sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:id="@+id/ib_choose_profile_sample1"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/selector_profile_image_background"
         android:padding="2dp"
         android:scaleType="fitXY"
@@ -73,7 +73,7 @@
         android:scaleType="fitXY"
         android:src="@drawable/img_dog4"
         app:layout_constraintBottom_toBottomOf="@+id/ib_choose_profile_sample3"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_choose_selected_profile"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/ib_choose_profile_sample3"
         app:layout_constraintTop_toTopOf="@+id/ib_choose_profile_sample3" />
@@ -84,7 +84,7 @@
         android:id="@+id/ib_choose_profile_sample5"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/selector_profile_image_background"
         android:padding="2dp"
         android:scaleType="fitXY"
@@ -131,7 +131,7 @@
         android:scaleType="fitXY"
         android:src="@drawable/img_cat2"
         app:layout_constraintBottom_toBottomOf="@+id/ib_choose_profile_sample7"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_choose_selected_profile"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/ib_choose_profile_sample7"
         app:layout_constraintTop_toTopOf="@+id/ib_choose_profile_sample7" />
@@ -142,7 +142,7 @@
         android:id="@+id/ib_choose_profile_sample9"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/selector_profile_image_background"
         android:padding="2dp"
         android:scaleType="fitXY"
@@ -189,7 +189,7 @@
         android:scaleType="fitXY"
         android:src="@drawable/img_cat6"
         app:layout_constraintBottom_toBottomOf="@+id/ib_choose_profile_sample11"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/iv_choose_selected_profile"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/ib_choose_profile_sample11"
         app:layout_constraintTop_toTopOf="@+id/ib_choose_profile_sample11" />
@@ -199,18 +199,18 @@
         android:id="@+id/iv_choose_selected_profile"
         android:layout_width="140dp"
         android:layout_height="140dp"
+        android:layout_marginEnd="50dp"
         android:scaleType="fitXY"
         android:src="@drawable/img_dog1"
-        app:layout_constraintBottom_toTopOf="@+id/btn_choose_signup"
+        app:layout_constraintBottom_toBottomOf="@+id/ib_choose_profile_sample9"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ib_choose_profile_sample9" />
+        app:layout_constraintTop_toTopOf="@+id/ib_choose_profile_sample1" />
 
     <Button
         android:id="@+id/btn_choose_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/component_color"
         android:text="회원가입"
         android:textColor="@color/text_color"
